feat(negotiation): enhance negotiation proposal handling with acceptance and rejection methods